Removed obsolete notifications option "never hides" (obsolete, because the notification center no longer exists) Updated options style to match new Deezer CSS Fixed broken info update on track change

--- a/css/large/popup.css
+++ b/css/large/popup.css
@@ -40,7 +40,17 @@
 	width: 232px;
 }
 
-#now_playing_info_track { margin-bottom: 2px; }
+#now_playing_info_track 
+{ 
+	margin-bottom: 4px;
+	font-size: 20px;
+}
+
+#now_playing_info_artist
+{ 
+	font-size: 14px;
+}
+	
 #cover 
 {
 	height: 250px;
