--- a/css/sideways/popup.css
+++ b/css/sideways/popup.css
@@ -50,4 +50,4 @@
 	width: 80px;
 }
 
-#shadow_top, #shadow_bottom { display: none; }
+#shadow_bottom { display: none; }
